tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_wrong_method_return_type/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type Foo, found type Field
   ┌─ src/main.nr:10:25
   │
10 │         fn default() -> Field {
   │                         -----
   │

Aborting due to 1 previous error
